spec/e2e/type/bool.lit
true(); # error: [line 1] Can only call functions and types.
